feat: add Activity and Schedule interfaces for improved activity management
- Introduced Schedule interface to define time, days, and optional professor details.
- Created Activity interface to encapsulate activity details including multiple schedules and images.
- Updated ClassCardItem interface to utilize the new Schedule structure and allow for optional image.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,9 @@
   --color-secondary-accent: #5e7e79;
   --color-third-accent: #cfdad9;
   --color-disabled: #b1bdbb;
+
+  /* Rounded Corners */
+  --radius-base: 0.625rem; /* 10px */
 }
 
 @layer base {
