fix: update heading tags for improved semantic structure and accessibility across multiple components

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
   --color-primary: #dedede;
   --color-secondary: #f9f9f9;
   --color-primary-text: #2e3030;
-  --color-secondary-text: #636464;
+  --color-secondary-text: #3f4040;
   --color-box: #f2f2f2;
   --color-primary-accent: #76c5b9;
   --color-secondary-accent: #5e7e79;
